--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -1,39 +1,15 @@
 <div class="background-container">
   <div class="flex-container">
     <div class="mainpage-title">
-      Jai Xiong
+      Download your CSV file
       <button (click)="download()">
         <img src="/../assets/Icons/download-pdf.png" alt="" class="download-icon">
         Download
       </button>
     </div>
   </div>
-    <div class="job-titles">Software Developer</div>
-    <div class="job-titles">Web Developer</div>
-    
     <div class="flex-container">
-        <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" class="mainpage-tabs">
-          <mat-tab label="Personal Details">
-            <!-- <app-personal-details></app-personal-details> -->
-            <span>Personal Details</span>
-          </mat-tab>
-          <mat-tab label="Education">
-            <!-- <app-education></app-education> -->
-            <span>Education</span>
-          </mat-tab>
-          <mat-tab label="Experience">
-            <!-- <app-experience></app-experience> -->
-            <span>Experience</span>
-          </mat-tab>
-          <mat-tab label="Skills">
-            <!-- <app-skills></app-skills> -->
-            <span>Skills</span>
-          </mat-tab>
-          <mat-tab label="Projects">
-            <!-- <app-projects></app-projects> -->
-            <span>Projects</span>
-          </mat-tab>
-        </mat-tab-group>
+        
     </div>
 </div>
 
