added username, password, login button, styling and routing once you login to move to next page

--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -1,4 +1,9 @@
-<p>JobTrackerApp Works!</p>
+<div>
+  <p>JobTrackerApp <button  mat-raised-button color="primary" (click)="mainpage()">Mainpage</button></p>
+  
+</div>
+
+             
 <router-outlet></router-outlet>
 
 
