created a table with temp data for testing, removed the tabs and buttons idea from yesterday

--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -1,10 +1,24 @@
-<div>
-  <p>JobTrackerApp <button  mat-raised-button color="primary" (click)="mainpage()">Mainpage</button></p>
-  
+<div class="header-info">
+  <div>
+    <p>JobTrackerApp <button  mat-raised-button color="primary" (click)="mainpage()">Mainpage</button></p>
+  </div>
 </div>
 
-             
-<router-outlet></router-outlet>
+
+<div class="flex-container">
+  <router-outlet></router-outlet>
+</div>
+
+
+<div class="footer-info">
+  <div>Copyright information &copy; 2023 Jai Xiong. All rights reserved.</div>
+  <div>
+    <a href="https://www.flaticon.com/free-icons/download-pdf" title="download pdf icons">
+      Download pdf by Freepik - Flaticon
+    </a>
+  </div>
+</div>
+
 
 
 
