--- a/JobTrackerApp/src/app/app.component.scss
+++ b/JobTrackerApp/src/app/app.component.scss
@@ -48,6 +48,15 @@
     bottom: 0; /* Align to the bottom */
     left: 0; /* Align to the left */
   }
+  .header-info {
+    width: 100%; /* Take up full width */
+    text-align: left; /* Center text */
+    padding: 10px 0; /* Add padding */
+    background-color: #f1f1f1; /* Light background color */
+    position: fixed; /* Fix the footer at the bottom */
+    top: 0; /* Align to the bottom */
+    left: 0; /* Align to the left */
+  }
 
   .download-icon {
     width: 24px; /* Set the width of the icon */
