--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -1,5 +1,6 @@
 <div class="flex-inner-container">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div> Add new employer</div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-border">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
