--- a/JobTrackerApp/src/app/app.component.scss
+++ b/JobTrackerApp/src/app/app.component.scss
@@ -83,3 +83,19 @@
   background-repeat: no-repeat; /* Prevent the image from repeating */
   min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
 }
+
+.logout-button {
+float: right; /* Float the button to the right */
+}
+
+.title-icon {
+  font-size: large; /* Set the size of the icon */
+  width: auto; /* Set the width of the icon */
+  margin-left: 20px; /* Add some space between the icon and the text */
+  cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
+  transition: color 0.3s ease; /* Smooth transition for color change */
+
+  &:hover {
+    color: #007bff; /* Change color on hover */
+  }
+}
