--- a/JobTrackerApp/src/components/login/login.component.html
+++ b/JobTrackerApp/src/components/login/login.component.html
@@ -4,12 +4,12 @@
         <div class="login-form">
             <div>
                 <mat-label class="login-label-custom">Username</mat-label>
-                <input matInput placeholder="Enter your username" required [(ngModel)]="username" name="username">
+                <input matInput placeholder="Enter your username" required [(ngModel)]="_username" name="username">
               </div>
           
               <div>
                 <mat-label class="login-label-custom">Password</mat-label>
-                <input matInput type="password" placeholder="Enter your password" required style="margin-left: 3px;">
+                <input matInput type="password" placeholder="Enter your password" required [(ngModel)]="_password" name="password" style="margin-left: 3px;">
               </div>
               <div class="login-button">
                 <button  mat-raised-button color="primary" (click)="login()">Login</button>
