added employer profile update for backend and frontend

--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="header-info">
   <div class="flex-container">
-    <mat-icon class="title-icon" mattooltip="Go to main page" (click)="mainpage()" >JobTrackerApp 
-      <!-- <button  mat-raised-button color="primary" (click)="mainpage()">Mainpage</button> -->
-      <!-- <button class="logout-button" mat-raised-button color="primary" (click)="logout()">Logout</button> -->
-    </mat-icon>
+    <mat-icon aria-hidden="false" class="title-icon" fontIcon="home" mattooltip="Go to main page" (click)="mainpage()"></mat-icon>
+    JobTrackerApp
     <button class="logout-button" mat-raised-button color="primary" (click)="logout()">Logout</button>
   </div>
 </div>
