--- a/JobTrackerApp/src/app/app.component.scss
+++ b/JobTrackerApp/src/app/app.component.scss
@@ -45,6 +45,7 @@
     padding: 10px 0; /* Add padding */
     background-color: #f1f1f1; /* Light background color */
     position: fixed; /* Fix the footer at the bottom */
+    z-index: 1000; /* Set z-index to ensure it's above other elements */
     bottom: 0; /* Align to the bottom */
     left: 0; /* Align to the left */
   }
@@ -54,6 +55,7 @@
     padding: 10px 0; /* Add padding */
     background-color: #f1f1f1; /* Light background color */
     position: fixed; /* Fix the footer at the bottom */
+    z-index: 1000; /* Set z-index to ensure it's above other elements */
     top: 0; /* Align to the bottom */
     left: 0; /* Align to the left */
   }
@@ -89,7 +91,7 @@ float: right; /* Float the button to the right */
 }
 
 .title-icon {
-  font-size: large; /* Set the size of the icon */
+  //font-size: large; /* Set the size of the icon */
   width: auto; /* Set the width of the icon */
   margin-left: 20px; /* Add some space between the icon and the text */
   cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
