--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container-components">
+<div class="flex-container-components-inner">
   <div>Select your profile</div>
   <mat-form-field>
     <mat-label>Profile</mat-label>
@@ -13,7 +13,9 @@
   
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> 
+        <a href="#" (click)="onNameClick($event, element)">{{element.name}}</a>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="city">
