--- a/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
+++ b/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
@@ -7,29 +7,29 @@
             <label for="name">Employer Name</label>
             <input type="text" id="name" formControlName="name">
     
-            <div formGroupName="address">
-                <h2>Address</h2>
-                <label for="street">Street</label>
-                <input type="text" id="street" formControlName="street">
+            <!-- <div formGroupName="address">
+                <h2>Location</h2> -->
+                <label for="street">Address</label>
+                <input type="text" id="address" formControlName="address">
                 <label for="city">City</label>
                 <input type="text" id="city" formControlName="city">
                 <label for="state">State</label>
                 <input type="text" id="state" formControlName="state">
                 <label for="zip">Zip</label>
                 <input type="text" id="zip" formControlName="zip">
-            </div>
+            <!-- </div> -->
     
-            <div formGroupName="contactInfo">
-                <h2>Contact</h2>
+            <!-- <div formGroupName="contactInfo">
+                <h2>Contact</h2> -->
                 <label for="phone">Phone</label>
                 <input type="text" id="phone" formControlName="phone">
                 <label for="email">Email</label>
                 <input type="text" id="email" formControlName="email">
                 <label for="website">Website</label>
                 <input type="text" id="website" formControlName="website">
-                <label for="date">Date</label>
-                <input type="text" id="date" formControlName="date">
-            </div>
+                <!-- <label for="date">Date</label>
+                <input type="text" id="date" formControlName="date"> -->
+            <!-- </div> -->
     
             <button type="submit" [disabled]="!employerProfileForm.valid">Submit</button>
         </form>
