--- a/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
+++ b/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.html
@@ -1,39 +1,135 @@
-
 <div class="flex-container-components-inner">
-    <p>employerprofile works!</p>
+    <p>Update Employer Profile</p>
     <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
-        <form [formGroup]="employerProfileForm" (ngSubmit)="onSubmit()">
-            <label for="name">Employer Name</label>
-            <input type="text" id="name" formControlName="name">
-    
-            <!-- <div formGroupName="address">
-                <h2>Location</h2> -->
-                <label for="street">Address</label>
-                <input type="text" id="address" formControlName="address">
-                <label for="city">City</label>
-                <input type="text" id="city" formControlName="city">
-                <label for="state">State</label>
-                <input type="text" id="state" formControlName="state">
-                <label for="zip">Zip</label>
-                <input type="text" id="zip" formControlName="zip">
-            <!-- </div> -->
-    
-            <!-- <div formGroupName="contactInfo">
-                <h2>Contact</h2> -->
-                <label for="phone">Phone</label>
-                <input type="text" id="phone" formControlName="phone">
-                <label for="email">Email</label>
-                <input type="text" id="email" formControlName="email">
-                <label for="website">Website</label>
-                <input type="text" id="website" formControlName="website">
-                <!-- <label for="date">Date</label>
-                <input type="text" id="date" formControlName="date"> -->
-            <!-- </div> -->
-    
-            <button type="submit" [disabled]="!employerProfileForm.valid">Submit</button>
-        </form>
-    </div>
-    
+        <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
+            <mat-tab label="EmployerProfile">
+                <ng-template mat-tab-label>
+                    <mat-icon>account_circle</mat-icon>
+                    <span>Employer Profile</span>
+                </ng-template>
+                <form [formGroup]="employerProfileForm" (ngSubmit)="onSubmit()">
+                    <label for="name">Employer Name</label>
+                    <input matInput type="text" id="name" formControlName="name" class="input-custom" placeholder={{data.name}}>
 
+                    <!-- <label for="id">ID</label>
+                        <input type="text" id="id" formControlName="id" class="input-custom" placeholder={{data.id}}>
+        
+                        <label for="jobProfileId">Job Profile ID</label> 
+                        <input type="text" id="jobProfileId" formControlName="jobProfileId" class="input-custom" placeholder={{data.jobProfileId}}> -->
+
+                    <label for="date">Date</label>
+                    <input matInput type="text" id="date" formControlName="date" class="input-custom" placeholder={{data.date}}>
+
+                    <label for="name">Name</label>
+                    <input type="text" id="name" formControlName="name" class="input-custom" placeholder={{data.name}}>
+
+                    <label for="title">Title</label>
+                    <input matInput type="text" id="title" formControlName="title" class="input-custom"
+                        placeholder={{data.title}}>
+
+                    <label for="address">Address</label>
+                    <input matInput type="text" id="address" formControlName="address" class="input-custom"
+                        placeholder={{data.address}}>
+
+                    <label for="city">City</label>
+                    <input matInput type="text" id="city" formControlName="city" class="input-custom" placeholder={{data.city}}>
+
+                    <label for="state">State</label>
+                    <input matInput type="text" id="state" formControlName="state" class="input-custom"
+                        placeholder={{data.state}}>
+
+                    <label for="zip">Zip</label>
+                    <input matInput type="text" id="zip" formControlName="zip" class="input-custom" placeholder={{data.zip}}>
+
+                    <label for="phone">Phone</label>
+                    <input matInput type="text" id="phone" formControlName="phone" class="input-custom"
+                        placeholder={{data.phone}}>
+
+                    <label for="email">Email</label>
+                    <input matInput type="text" id="email" formControlName="email" class="input-custom"
+                        placeholder={{data.email}}>
+
+                    <label for="website">Website</label>
+                    <input matInput type="text" id="website" formControlName="website" class="input-custom" 
+                        placeholder={{data.website}}>
+
+                    <button type="submit" [disabled]="!employerProfileForm.valid" class="submit-button">Submit</button>
+                </form>
+            </mat-tab>
+            <mat-tab label="Action" (click)="setActionForm()">
+                <ng-template mat-tab-label>
+                    <mat-icon>flag_circle</mat-icon>
+                    <span>Action</span>
+                </ng-template>
+                <form [formGroup]="actionForm" (ngSubmit)="onSubmit()">
+                    <label>Date</label>
+                    <input matInput type="text" id="date" formControlName="date" class="input-custom" placeholder={{detailsForm.value.date}}>
+                    <label>Action</label>
+                    <input matInput type="text" id="action" formControlName="action" class="input-custom" placeholder={{detailsForm.value.action}}>
+                    <label>Method</label>
+                    <input matInput type="text" id="method" formControlName="method" class="input-custom" placeholder={{detailsForm.value.method}}>
+                    <label>Action Result</label>
+                    <input matInput type="text" id="actionresult" formControlName="actionresult" class="input-custom" placeholder={{detailsForm.value.actionResult}}>
+
+                    <button type="submit" [disabled]="!actionForm.valid" class="submit-button">Submit</button>
+                </form>
+            </mat-tab>
+            <mat-tab label="Details" (click)="setDetailsForm()">
+                <ng-template mat-tab-label>
+                    <mat-icon>edit_note</mat-icon>
+                    <span>Details</span>
+                </ng-template>
+                <form [formGroup]="detailsForm" (ngSubmit)="onSubmit()">
+                    <label>Date</label>
+                    <input matInput type="text" id="date" formControlName="date" class="input-custom" placeholder={{detailsForm.value.date}}>
+                    <label>Comments</label>
+                    <input matInput type="text" id="comments" formControlName="comments" class="input-custom" placeholder={{detailsForm.value.Comments}}>
+                    <label>Updates</label>
+                    <input matInput type="text" id="updates" formControlName="updates" class="input-custom" placeholder={{detailsForm.value.Updates}}>
+
+                    <button type="submit" [disabled]="!detailsForm.valid" class="submit-button">Submit</button>
+                </form>
+            </mat-tab>
+        </mat-tab-group>
+        <!-- <form [formGroup]="employerProfileForm" (ngSubmit)="onSubmit()">
+            <label for="name">Employer Name</label>
+            <input type="text" id="name" formControlName="name" class="input-custom" placeholder={{data.name}}> -->
+
+        <!-- <label for="id">ID</label>
+                <input type="text" id="id" formControlName="id" class="input-custom" placeholder={{data.id}}>
+
+                <label for="jobProfileId">Job Profile ID</label> 
+                <input type="text" id="jobProfileId" formControlName="jobProfileId" class="input-custom" placeholder={{data.jobProfileId}}> -->
+
+        <!-- <label for="date">Date</label>
+                <input type="text" id="date" formControlName="date" class="input-custom" placeholder={{data.date}}>
+
+                <label for="name">Name</label>
+                <input type="text" id="name" formControlName="name" class="input-custom" placeholder={{data.name}}>
+
+                <label for="title">Title</label>
+                <input type="text" id="title" formControlName="title" class="input-custom" placeholder={{data.title}}>
+
+                <label for="address">Address</label>
+                <input type="text" id="address" formControlName="address" class="input-custom" placeholder={{data.address}}>
+
+                <label for="city">City</label>
+                <input type="text" id="city" formControlName="city" class="input-custom" placeholder={{data.city}}>
+
+                <label for="state">State</label>
+                <input type="text" id="state" formControlName="state" class="input-custom" placeholder={{data.state}}>
+
+                <label for="zip">Zip</label>
+                <input type="text" id="zip" formControlName="zip" class="input-custom" placeholder={{data.zip}}>
+                <label for="phone">Phone</label>
+                <input type="text" id="phone" formControlName="phone" class="input-custom" placeholder={{data.phone}}>
+                <label for="email">Email</label>
+                <input type="text" id="email" formControlName="email" class="input-custom" placeholder={{data.email}}>
+                <label for="website">Website</label>
+                <input type="text" id="website" formControlName="website" class="input-custom" placeholder={{data.website}}>
+
+                <button type="submit" [disabled]="!employerProfileForm.valid" class="submit-button">Submit</button>
+        </form>  -->
+    </div>
 </div>
