--- a/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.scss
+++ b/JobTrackerApp/src/components/manage-employerprofiles/employerprofile/employerprofile.component.scss
@@ -34,3 +34,47 @@ label {
     overflow: hidden !important;
     //height: 75vh; /* Full viewport height */
 }
+
+.employer-formgroup-container {
+    display: flex-grow;
+    flex-direction: column; /* This is the default value, so it's optional */
+    //justify-content: start; /* Adjusts the spacing between items */
+    align-items: center; /* Aligns items vertically in the center */
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    overflow: hidden !important;
+    //height: 75vh; /* Full viewport height */
+}
+
+.input-custom {
+  display: flex;
+  width: 98%;
+}
+
+.submit-button {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+// .vertical-tabs {
+//   display: flex;
+//   flex-direction: row;
+  
+    // .mat-tab-labels {
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: center;
+    //   align-items: center;
+    //   width: 100%;
+    // }
+
+    //  .mat-tab-body-wrapper {
+    //   // display: flex;
+    //   // flex-direction: column;
+    //   // justify-content: center;
+    //   // align-items: center;
+    //   // width: 100%;
+    //   flex-grow: 1;
+    //  }
+//}
