new dialogs, new icons to start creating new profiles

--- a/JobTrackerApp/src/components/manage-dialog-popups/create-employerprofiles/create-employerprofiles/create-employerprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/create-employerprofiles/create-employerprofiles/create-employerprofiles.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container-components-inner">
-    <p>Update Employer Profile</p>
+    <p>Add New Employer Profile</p>
     <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
         <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
