--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-userprofiles/dialog-userprofiles/dialog-userprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-userprofiles/dialog-userprofiles/dialog-userprofiles.component.html
@@ -2,7 +2,7 @@
     <p>Add New User Profile</p>
     <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <div class="flex-container-components-inner">
-        <mat-tab-group>
+        <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
             <mat-tab label="UserProfile">
                 <ng-template mat-tab-label>
                     <mat-icon>account_circle</mat-icon>
@@ -10,8 +10,8 @@
                 </ng-template>
                 <form [formGroup]="userProfileForm" (ngSubmit)="onSubmit()">
 
-                    <label for="date">Date</label>
-                    <input matInput type="text" id="date" formControlName="date" class="input-custom" placeholder={{data.date}}>
+                    <!-- <label for="date">Date</label>
+                    <input matInput type="text" id="date" formControlName="date" class="input-custom" placeholder={{data.date}}> -->
 
                     <label for="name">Name</label>
                     <input type="text" id="name" formControlName="name" class="input-custom" placeholder={{data.name}}>
