Added dialogs now when adding job profiles, updated backend to be able to add new job profiles

--- a/JobTrackerApp/src/app/app.component.html
+++ b/JobTrackerApp/src/app/app.component.html
@@ -12,11 +12,11 @@
 
 <div class="footer-info">
   <div>Copyright information &copy; 2023 Jai Xiong. All rights reserved.</div>
-  <div>
+  <!-- <div>
     <a href="https://www.flaticon.com/free-icons/download-pdf" title="download pdf icons">
       Download pdf by Freepik - Flaticon
     </a>
-  </div>
+  </div> -->
 </div>
 
 
