--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-jobprofiles/dialog-jobprofiles.component.html
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-jobprofiles/dialog-jobprofiles.component.html
@@ -1,5 +1,4 @@
 <div class="flex-container-components-inner">
-    <p>Add New Job Profile</p>
     <mat-icon aria-hidden="false" aria-label="Close" (click)="onClose()" class="close-icon">close</mat-icon>
     <mat-tab-group class="vertical-tabs" mat-align-tabs="start" (selectedTabChange)="onTabChange($event)">
         <div class="flex-container-components-inner">
@@ -9,9 +8,9 @@
                     <span>Job Profile</span>
                 </ng-template>
                 <form [formGroup]="jobProfileForm" (ngSubmit)="onSubmit()">
-
+                    
                     <label for="profileName">Profile Name</label>
-                    <input matInput type="text" id="profileName" formControlName="profileName" class="input-custom" placeholder="Type a job profile name">
+                    <input matInput type="text" id="profileName" formControlName="profileName" class="input-custom" placeholder="Add a new job profile name">
 
                     <button type="submit" [disabled]="!jobProfileForm.valid" class="submit-button">Submit</button>
                 </form>
