--- a/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-jobprofiles/dialog-jobprofiles.component.scss
+++ b/JobTrackerApp/src/components/manage-dialog-popups/dialog-jobprofiles/dialog-jobprofiles/dialog-jobprofiles.component.scss
@@ -10,6 +10,7 @@ label {
     right: 0;
     padding: 1em;
     cursor: pointer;
+    z-index: 1000;
   }
 
   .flex-container-components { //the main container for components
